feature/1-category-badge#1

--- a/templates/guest_menus.html
+++ b/templates/guest_menus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>メニュー一覧 - 弁当注文システム</title>
     <link rel="stylesheet" href="/static/css/guest_menus.css">
+    <link rel="stylesheet" href="/static/css/badges.css">
 </head>
 <body>
     <!-- ヘッダー -->
