--- a/templates/unified_menus.html
+++ b/templates/unified_menus.html
@@ -6,6 +6,7 @@
     <title>メニュー一覧 - 弁当注文システム</title>
     <link rel="stylesheet" href="/static/css/universal_header.css">
     <link rel="stylesheet" href="/static/css/unified_menus.css">
+    <link rel="stylesheet" href="/static/css/badges.css">
 </head>
 <body>
     <!-- 共通ヘッダー -->
